--- a/react-demos/package.json
+++ b/react-demos/package.json
@@ -17,6 +17,7 @@
     "@speedingplanet/eslint-config": "^0.0.6",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
+    "graphql": "^16.9.0",
     "lodash": "^4.17.21",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
