--- a/react-labs/react-app/package.json
+++ b/react-labs/react-app/package.json
@@ -25,7 +25,8 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^9.1.1",
-		"react-router-dom": "^6.22.3"
+		"react-router-dom": "^6.22.3",
+		"react-toastify": "^10.0.5"
 	},
 	"devDependencies": {
 		"@testing-library/jest-dom": "^6.4.2",
